refactor: improve code readability and update API documentation